# realign-chat-history-service

./: .gitignore  Dockerfile  ReadMe.md  docker-compose.yaml  pyproject.toml
.run/: FastAPI.run.xml
src/: main.py
src/application/use_cases/: append_message.py  create_conversation.py  create_message.py  delete_conversation.py  delete_message.py  list_conversation.py  list_messages.py  read_conversation.py  read_message.py  update_conversation.py  update_message.py
src/configurations/: config.py
src/domain/: entities.py  repositories.py
src/infrastructure/repositories/: in_memory_repository.py
src/interfaces/api/: conversation_router.py  message_router.py
